[package]
name = "calvinfs-demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "calvinfs_demo"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[dependencies]
async-trait = "0.1"
bincode = "1"
bytes = "1"
prost = "0.13"
redb = "4.1.0"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[target.'cfg(not(madsim))'.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }

[target.'cfg(madsim)'.dependencies]
madsim = "0.2.34"
tokio = { package = "madsim-tokio", version = "0.2.30", features = ["macros", "rt", "sync", "time"] }
tonic = { package = "madsim-tonic", version = "0.6.0" }

[build-dependencies]
prost-build = "0.13"
protoc-bin-vendored = "3.2.0"

[target.'cfg(not(madsim))'.build-dependencies]
tonic-build = "0.12"

[target.'cfg(madsim)'.build-dependencies]
madsim-tonic-build = "0.6.0"

[dev-dependencies]
anyhow = "1"
